src/styles/App.css
.App {
  text-align: center;
}

.bold {
  font-weight: bold;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #007579;
  min-height: 100vh;
  flex-direction: row;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#book-display {
  font-family: "Cormorant", serif;
  display: flex;
  margin:  auto;
  flex-wrap: wrap;
  background-color:rgb(247, 239, 230);
  padding-top: 3rem;
  z-index: -1;
}

#books-h1 {
  padding-top: 8rem;
  text-align: center;
  color: white;
  font-family: "Vollkorn", serif;
  background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
}

#cardBtns {
  position: absolute;
  bottom: 0;
  
  margin-bottom: 5px;
}

#books-container {
  width: 15rem;
  margin: 0 auto 2rem auto;
}

.card-img-top {
  margin: 0 auto;
  border-radius: 4px;
  height: 15rem;
  width: 12rem;
}

#books-h1 {
  top: 0;
  left: 0;
  display: fixed;
}
.card {
  margin: auto;
  margin-bottom: 2rem;
  text-align: center;
  height: auto;
  border: none;
  background-color: #ffffff;
  font-family: "Cormorant", serif;
  box-shadow: 0 0 10px #8888887e;
  justify-content: space-between;
}

/* button {
  background: rgb(15, 10, 107);
  background: linear-gradient(
    90deg,
    rgba(15, 10, 107, 1) 11%,
    rgba(17, 17, 182, 1) 80%,
    rgba(10, 91, 237, 1) 100%
  );
  color: white;
  border: none;
}
button:hover {
  color: white;
  border: none;
} */

.card-text,
.card-title,
.card-subtitle {
  color: rgb(59, 6, 66);
}

.col-container {
  text-align: center;
}
#bookForm {
  text-align: left;
  display: flex;
  flex-wrap: wrap;
}

#add-book {
  padding-top: 8rem;
  padding-bottom: 5rem;
  background-color: rgb(247, 239, 230);
  height: 100%;
  font-family: "Cormorant", serif;
}

#bookForm {
  padding: 1rem;
  box-shadow: 5px 5px rgba(128, 128, 128, 0.356);
  margin: 2rem;
  background-color: white;
  border-radius: 5px;
}
#book-header {
  text-align: center;
}

.col-mid-6 {
  margin: auto;
}

#bookPage {
  font-family: "Cormorant", serif;
}

#footer {
  background-color: darkgray;
}

